Fix lack of page margins on mobile devices

--- a/_sass/enhancements/_section.scss
+++ b/_sass/enhancements/_section.scss
@@ -1,6 +1,5 @@
 .section {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding: 3rem 1rem;
 
   &__title {
     @extend .title;
